orden de carpetas y cambios minimos

--- a/src/styles/informacionPokemon.css
+++ b/src/styles/informacionPokemon.css
@@ -139,3 +139,14 @@
     width: 80%;
   }
 }
+
+.cajaCargando {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 90vh;
+}
+
+.cargandoDB {
+  color: aliceblue;
+}
