--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -30,7 +30,7 @@ body{
   justify-content: space-evenly;
   align-items: center;
   padding: 1rem;
-  background-color: #2a2a2a;
+  background-color: #94294e;
   color: white;
   font-weight: bold;
   font-size: 1.3rem;
