--- a/src/styles/menuPrincipal.css
+++ b/src/styles/menuPrincipal.css
@@ -84,6 +84,7 @@
   
   .cajaCargando {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 90vh;
