--- a/src/styles/menuPrincipal.css
+++ b/src/styles/menuPrincipal.css
@@ -1,4 +1,4 @@
-.contenedorPokemons {
+body.theme-moderno .contenedorPokemons {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -10,27 +10,27 @@
     gap: 1rem;
   }
   
-  .linkedIn {
+body.theme-moderno .linkedIn {
     display: flex;
     width: 200px;
     justify-content: space-around;
     align-items: center;
   }
   
-  .imagenPoke {
+body.theme-moderno .imagenPoke {
     width: 100%;
     height: 200px;
     object-fit: cover;
     border-radius: 10px;
   }
   
-  .imagenHeader {
+body.theme-moderno .imagenHeader {
     height: 50px;
     object-fit: cover;
     border-radius: 10px;
   }
   
-  .barra-busqueda {
+body.theme-moderno .barra-busqueda {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -39,7 +39,7 @@
     gap: 10px;
   }
   
-  .input-busqueda {
+body.theme-moderno .input-busqueda {
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #ccc;
@@ -47,7 +47,7 @@
     text-align: center;
   }
   
-  .pokemon {
+body.theme-moderno .pokemon {
     margin: 10px;
     padding: 10px;
     border: 4px solid #94294e;
@@ -58,19 +58,19 @@
     background-color: #242424;
   }
   
-  .pokemon:hover {
+body.theme-moderno .pokemon:hover {
     background-color: #515151;
   }
   
-  .navLink {
+body.theme-moderno .navLink {
     color: white;
   }
   
-  .tipoPokemon {
+body.theme-moderno .tipoPokemon {
     font-weight: bold;
   }
   
-  .infoPoke {
+body.theme-moderno .infoPoke {
     display: none;
     flex-direction: column;
     justify-content: center;
@@ -78,11 +78,11 @@
     margin-top: 10px;
   }
   
-  .imgFooter {
+body.theme-moderno .imgFooter {
     height: 20px;
   }
   
-  .cajaCargando {
+body.theme-moderno .cajaCargando {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -90,57 +90,211 @@
     height: 90vh;
   }
   
-  .cargandoDB {
+body.theme-moderno .cargandoDB {
     color: aliceblue;
   }
   
 
   
   @media (max-width: 768px) {
-    .contenedorPokemons {
+body.theme-moderno     .contenedorPokemons {
       padding: 1rem;
     }
   
-    .pokemon {
+body.theme-moderno     .pokemon {
       width: 150px;
       margin: 8px;
       padding: 8px;
     }
   
-    .imagenPoke {
+body.theme-moderno     .imagenPoke {
       height: 150px;
     }
   
-    .input-busqueda {
+body.theme-moderno     .input-busqueda {
       width: 250px;
     }
   
-    .linkedIn {
+body.theme-moderno     .linkedIn {
       width: 150px;
     }
   }
   
   @media (max-width: 480px) {
-    .contenedorPokemons {
+body.theme-moderno     .contenedorPokemons {
       flex-direction: column;
       align-items: center;
       padding: 1rem;
     }
   
-    .pokemon {
+body.theme-moderno     .pokemon {
       width: 80%;
       max-width: 250px;
     }
   
-    .imagenPoke {
+body.theme-moderno     .imagenPoke {
       height: auto;
     }
   
-    .input-busqueda {
+body.theme-moderno     .input-busqueda {
       width: 80%;
     }
   
-    .linkedIn {
+body.theme-moderno     .linkedIn {
+      width: 100%;
+      flex-direction: column;
+      gap: 5px;
+    }
+  }
+
+
+  body.theme-retro .contenedorPokemons {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 20px;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 2rem;
+    text-align: center;
+    gap: 1rem;
+  }
+
+body.theme-retro .pokemonDetalle{
+    font-size: smaller;
+}
+  
+body.theme-retro .linkedIn {
+    display: flex;
+    width: 200px;
+    justify-content: space-around;
+    align-items: center;
+  }
+  
+body.theme-retro .imagenPoke {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 10px;
+  }
+  
+body.theme-retro .imagenHeader {
+    height: 50px;
+    object-fit: cover;
+    border-radius: 10px;
+  }
+  
+body.theme-retro .barra-busqueda {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 30px;
+    margin-bottom: 5px;
+    gap: 10px;
+  }
+  
+body.theme-retro .input-busqueda {
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    width: 300px;
+    text-align: center;
+  }
+  
+body.theme-retro .pokemon {
+    margin: 10px;
+    padding: 10px;
+    border: 4px solid #94294e;
+    border-radius: 8px;
+    width: 200px;
+    text-align: center;
+    cursor: pointer;
+    background-color: #242424;
+  }
+  
+body.theme-retro .pokemon:hover {
+    background-color: #515151;
+  }
+  
+body.theme-retro .navLink {
+    color: white;
+  }
+  
+body.theme-retro .tipoPokemon {
+    font-weight: bold;
+  }
+  
+body.theme-retro .infoPoke {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+  }
+  
+body.theme-retro .imgFooter {
+    height: 20px;
+  }
+  
+body.theme-retro .cajaCargando {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 90vh;
+  }
+  
+body.theme-retro .cargandoDB {
+    color: aliceblue;
+  }
+  
+
+  
+  @media (max-width: 768px) {
+body.theme-retro     .contenedorPokemons {
+      padding: 1rem;
+    }
+  
+body.theme-retro     .pokemon {
+      width: 150px;
+      margin: 8px;
+      padding: 8px;
+    }
+  
+body.theme-retro     .imagenPoke {
+      height: 150px;
+    }
+  
+body.theme-retro     .input-busqueda {
+      width: 250px;
+    }
+  
+body.theme-retro     .linkedIn {
+      width: 150px;
+    }
+  }
+  
+  @media (max-width: 480px) {
+body.theme-retro     .contenedorPokemons {
+      flex-direction: column;
+      align-items: center;
+      padding: 1rem;
+    }
+  
+body.theme-retro     .pokemon {
+      width: 80%;
+      max-width: 250px;
+    }
+  
+body.theme-retro     .imagenPoke {
+      height: auto;
+    }
+  
+body.theme-retro     .input-busqueda {
+      width: 80%;
+    }
+  
+body.theme-retro     .linkedIn {
       width: 100%;
       flex-direction: column;
       gap: 5px;
